Fixed Spacing Issues

--- a/assignment3/css/styles.css
+++ b/assignment3/css/styles.css
@@ -50,6 +50,9 @@
 }
 @media (max-width: 767px) {
   /*Header*/
+  #collapsable-nav {
+    padding: 10px;
+  }
   #collapsable-nav a { /* Collapsed nav menu text */
     font-size: 1.2em;
   }
@@ -69,7 +72,6 @@
     background-color: #888888;
   }
   #collapsable-nav {
-    padding: 0;
     border-color: #000;
   }
   #collapsable-nav hr {
